# trustier

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  test.json
.devcontainer/: devcontainer.json
.github/workflows/: CODEOWNERS  release.yml  rust.yml
_TESTDATA_/: juiceshop.cyclonedx.json  railsgoat.cyclonedx.json
src/: main.rs  models.rs
test/: cli.rs
test/_TESTDATA_/: juiceshop.cyclonedx.json  trustier.cyclonedx.json  trustier.small.cyclonedx.json
tests/: cli.rs
tests/_TESTDATA_/: railsgoat.cyclonedx.json  small.cyclonedx.json  trustier.cyclonedx.json
