[package]
name = "trustier"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.17", features = ["derive"] }
cyclonedx-bom = "0.7.0"
surf = "2.3.2"
async-std = "1.13.0"
packageurl = "0.4.1"
colored = "2.1.0"
clap-stdin = "0.5.1"

[dev-dependencies]
anyhow = "1.0.89"
assert_cmd = "2.0.16"
predicates = "3.1.2"
pretty_assertions = "1.4.1"